# DatabricksGenAI

./: 20250601 Alan_Dennis_Resume.docx  README.md
Chapters/Chapter 13/: 00_create_table_and_log_model.ipynb  00_create_table_and_log_model.py  00_generate_data.ipynb  01_model_packaging.py  02_versioning_aliases.ipynb  02_versioning_aliases.py  03_evaluate_agent.ipynb  03_evaluate_agent.py  03_tracking_and_tracing.py  03_tracking_promotion.py  04_production_monitoring.py  05_mlflow_projects_to_dabs.py  07_deployment_pipeline.py  07_prompt_registry.py  08_prompt_registry.ipynb  09_ai_gateway.py  10_ai_gateway.py  11_databricks_apps.py  13_data_ingestion.py  data_quailtiy_agent_demo_data_gen.ipynb  data_quality_agent_demo_data.py  data_quality_agent_model_notebook.ipynb
Chapters/Chapter 13/mlflow/data_quality_agent/: README.md  databricks.yml  pyproject.toml
Chapters/Chapter 13/mlflow/data_quality_agent/resources/: sample_job.job.yml
Chapters/Chapter 13/mlflow/data_quality_agent/src/: sample_notebook.ipynb
Chapters/Chapter 13/mlflow/data_quality_agent/src/data_quality_agent/: cobaltworks_data.py  data_quality_agent.py  main.py  taxis.py
Chapters/Chapter 2/: README.md
Chapters/Chapter 3/: README.md
Chapters/Chapter 4/: README.md
Chapters/Chapter 5/: Generative_AI_Design_Architecture_Blueprint.docx  Generative_AI_Design_Architecture_Blueprint.md  Generative_AI_Scope_Approach_Objectives.docx  Generative_AI_Scope_Approach_Objectives.md  Magic eight ball example.ipynb  README.md  genai_agentic_ai_nfr_checklist.xlsx
docs/: gemini_instructions.asciidoc
(+31 files in other folders)
